Ensure header__logo stays on top on tablet with z-index

--- a/css/style.css
+++ b/css/style.css
@@ -141,17 +141,19 @@ input::placeholder {
   }
 }
 
-@media (max-width: 991px) {
-  .header__logo {
-    display: inline-flex;
-  }
-}
-
 @media (min-width: 992px) {
   .header__logo {
     position: fixed;
     top: 1.6875rem;
     left: 1.6875rem;
+    z-index: 102;
+  }
+}
+
+@media (max-width: 991px) {
+  .header__logo {
+    display: inline-flex;
+    position: relative;
     z-index: 102;
   }
 }
